[package]
name = "rustproject"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.2"
rnd = "0.1.1"
axum = "0.8"        # latest stable version as of now
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
getset = "0.1"
firebase-rs = "2.0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
uuid = { version = "1", features = ["v4", "fast-rng", "macro-diagnostics"] }
